--- a/app/src/main/res/layout/activity_collection_import.xml
+++ b/app/src/main/res/layout/activity_collection_import.xml
@@ -7,7 +7,7 @@
 
     <include layout="@layout/toolbar" />
 
-    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.viewpager.widget.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,7 +17,7 @@
         This title strip will display the currently visible page title, as well as the page
         titles for adjacent pages.
         -->
-        <android.support.v4.view.PagerTitleStrip
+        <androidx.viewpager.widget.PagerTitleStrip
             android:id="@+id/pager_title_strip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,6 +27,6 @@
             android:paddingTop="4dp"
             android:textColor="#fff" />
 
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 
 </RelativeLayout>
