--- a/app/src/main/res/layout/inputform_car.xml
+++ b/app/src/main/res/layout/inputform_car.xml
@@ -31,11 +31,11 @@
                 app:ms_highlightColor="@color/secondaryColor"
                 app:ms_floatingLabelColor="@color/secondaryColor" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputEditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/car_type_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -43,13 +43,13 @@
                     android:imeOptions="actionNext"
                     android:inputType="textNoSuggestions" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputEditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/car_numberplate_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -57,14 +57,14 @@
                     android:imeOptions="actionNext"
                     android:inputType="textNoSuggestions" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputEditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/car_startkm_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -72,7 +72,7 @@
                     android:imeOptions="actionDone"
                     android:inputType="number" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <fr.ganfra.materialspinner.MaterialSpinner
                 android:id="@+id/fueltypes_spinner"
